ingress/pms8-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pms8-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target : "/"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tomcat-svc
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
                service:
                        name: jenkins-svc
                        port:
                                number: 8080
